--- a/index.html
+++ b/index.html
@@ -591,6 +591,7 @@
     const NOSTR_RELAY = "wss://relay.0x6d.net";
     const NOSTR_PRESETS_KIND = 30317;
     const NOSTR_PRESETS_D = "herzog-docs-presets";
+    const NOSTR_WHDA_D = "WHDA";
     const MAGNET_TRACKERS =
       "&tr=wss%3A%2F%2Ftracker.0x6d.net";
     const COLLECTION_MAGNET =
@@ -889,62 +890,128 @@
         });
       }
 
-      function loadFilmLibrary() {
-        fetch("hashes.txt")
-          .then((response) => (response.ok ? response.text() : ""))
-          .then((text) => {
-            if (!text) return;
+      function loadFilmLibraryFromWhda() {
+        if (!NOSTR_RELAY || typeof WebSocket === "undefined") {
+          setScanStatus("Metadata scan: WHDA relay disabled");
+          filmBag = [];
+          refreshNostrDraftFromFilmBag();
+          return;
+        }
 
-            const items = [];
-            text.split("\n").forEach((line) => {
-              const trimmed = line.trim();
-              if (!trimmed) return;
-              const firstSpace = trimmed.indexOf(" ");
-              const hash =
-                firstSpace === -1 ? trimmed : trimmed.slice(0, firstSpace);
-              const title =
-                firstSpace === -1
-                  ? trimmed
-                  : trimmed.slice(firstSpace + 1).trim();
-              if (!/^[0-9a-fA-F]{40}$/.test(hash)) return;
-              items.push({ hash, title });
-            });
+        setScanStatus("Metadata scan: loading WHDA from relay…");
 
-            if (!items.length) {
-              filmBag = [];
-              refreshNostrDraftFromFilmBag();
-              return;
+        let resolved = false;
+        let ws;
+        try {
+          ws = new WebSocket(NOSTR_RELAY);
+        } catch (e) {
+          setScanStatus("Metadata scan: error opening WHDA WebSocket");
+          filmBag = [];
+          refreshNostrDraftFromFilmBag();
+          return;
+        }
+
+        const items = [];
+
+        const done = () => {
+          if (resolved) return;
+          resolved = true;
+          try {
+            if (ws && ws.readyState === WebSocket.OPEN) {
+              ws.close();
             }
+          } catch (e) {
+            // ignore
+          }
 
-            listEl.innerHTML = "";
-            countEl.textContent = items.length + " films";
-
-            filmBag = items;
+          if (!items.length) {
+            setScanStatus("Metadata scan: no WHDA items on relay");
+            filmBag = [];
             refreshNostrDraftFromFilmBag();
+            return;
+          }
 
-            items.forEach((item, index) => {
-              const movie = {
-                id:
-                  "film-" +
-                  String(index + 1)
-                    .toString()
-                    .padStart(2, "0"),
-                title: item.title,
-                sizeBytes: 0,
-                tags: ["herzog"],
-              };
-              const node = createMovieElement(movie);
-              node.addEventListener("click", () => {
-                loadFilmFromHash(item.hash, item.title, movie.id);
-              });
-              listEl.appendChild(node);
+          listEl.innerHTML = "";
+          countEl.textContent = items.length + " films";
+
+          filmBag = items;
+          refreshNostrDraftFromFilmBag();
+
+          items.forEach((item, index) => {
+            const movie = {
+              id:
+                "film-" +
+                String(index + 1)
+                  .toString()
+                  .padStart(2, "0"),
+              title: item.title,
+              sizeBytes: 0,
+              tags: ["herzog"],
+            };
+            const node = createMovieElement(movie);
+            node.addEventListener("click", () => {
+              loadFilmFromHash(item.hash, item.title, movie.id);
             });
-
-            startMetadataScanFromHashes(items);
-          })
-          .catch(() => {
-            // leave library empty if hashes.txt not available
+            listEl.appendChild(node);
           });
+
+          startMetadataScanFromHashes(items);
+        };
+
+        const timer = setTimeout(() => {
+          setScanStatus("Metadata scan: WHDA relay timeout");
+          done();
+        }, 3500);
+
+        ws.onopen = () => {
+          const filter = {
+            kinds: [NOSTR_PRESETS_KIND],
+            "#d": [NOSTR_WHDA_D],
+          };
+          ws.send(JSON.stringify(["REQ", "cinema-whda", filter]));
+        };
+
+        ws.onmessage = (event) => {
+          let msg;
+          try {
+            msg = JSON.parse(event.data);
+          } catch (e) {
+            return;
+          }
+
+          if (!Array.isArray(msg) || msg.length < 2) return;
+          if (msg[0] === "EVENT") {
+            const eventObj = msg[2];
+            if (!eventObj || typeof eventObj.content !== "string") return;
+            try {
+              const payload = JSON.parse(eventObj.content);
+              const rawItems = Array.isArray(payload.items)
+                ? payload.items
+                : Array.isArray(payload)
+                ? payload
+                : [];
+              rawItems.forEach((item) => {
+                if (!item || typeof item.infohash !== "string") return;
+                const hash = item.infohash.trim();
+                if (!/^[0-9a-fA-F]{40}$/.test(hash)) return;
+                const title = item.title || hash;
+                items.push({ hash, title });
+              });
+            } catch (e) {
+              // ignore malformed WHDA content
+            }
+          } else if (msg[0] === "EOSE") {
+            clearTimeout(timer);
+            setScanStatus("Metadata scan: WHDA loaded from relay");
+            done();
+          }
+        };
+
+        ws.onerror = () => {
+          clearTimeout(timer);
+          setScanStatus("Metadata scan: error talking to WHDA relay");
+          done();
+        };
       }
 
       function startMetadataScanFromHashes(items) {
@@ -1230,7 +1297,7 @@
       updateStatusIdle();
       overlayBadge.textContent = "Select a film…";
       setNostrStatus("Nostr presets: idle");
-      loadFilmLibrary();
+      loadFilmLibraryFromWhda();
 
       loadPresets();
     }
