--- a/index.html
+++ b/index.html
@@ -572,7 +572,12 @@
       <div class="client-actions">
         <button class="client-button" id="nostr-whda-reload">Reload from relay</button>
         <button class="client-button" id="nostr-whda-apply">Apply draft locally</button>
-        <span class="client-note">Draft is local-only; posting to Nostr will need a key.</span>
+        <button class="client-button" id="nostr-whda-sync">Sync WHDA to relay (POC)</button>
+        <span class="client-note">Draft is local-only; sync is unsigned POC (relays may reject).</span>
+      </div>
+      <div class="client-row">
+        <div class="client-label">EVENT frame (copy to your Nostr tool)</div>
+        <pre class="nostr-block" id="nostr-event-frame">// EVENT frame will appear here when you sync.</pre>
       </div>
     </section>
 
@@ -754,6 +759,8 @@
       const nostrWhdaEl = document.getElementById("nostr-whda");
       const nostrWhdaReloadButton = document.getElementById("nostr-whda-reload");
       const nostrWhdaApplyButton = document.getElementById("nostr-whda-apply");
+      const nostrWhdaSyncButton = document.getElementById("nostr-whda-sync");
+      const nostrEventFrameEl = document.getElementById("nostr-event-frame");
       const nostrKeyLabelEl = document.getElementById("nostr-key-label");
 
       let client = null;
@@ -936,6 +943,132 @@
         } catch (e) {
           setScanStatus("Metadata scan: error parsing WHDA draft");
         }
+      }
+
+      function buildWhdaItemsFromDraftOrFilmBag() {
+        let items = [];
+        if (nostrWhdaEl) {
+          let raw = (nostrWhdaEl.textContent || "").trim();
+          if (raw && !raw.startsWith("//")) {
+            try {
+              const payload = JSON.parse(raw);
+              const rawItems = Array.isArray(payload.items)
+                ? payload.items
+                : Array.isArray(payload)
+                ? payload
+                : [];
+              rawItems.forEach((item) => {
+                if (!item || typeof item.infohash !== "string") return;
+                const hash = item.infohash.trim();
+                if (!/^[0-9a-fA-F]{40}$/.test(hash)) return;
+                const title = item.title || hash;
+                items.push({ hash, title });
+              });
+            } catch (e) {
+              // fall back to filmBag
+            }
+          }
+        }
+
+        if (!items.length && Array.isArray(filmBag) && filmBag.length) {
+          items = filmBag.slice();
+        }
+
+        return items;
+      }
+
+      function buildWhdaEvent() {
+        const items = buildWhdaItemsFromDraftOrFilmBag();
+        if (!items.length) return null;
+
+        const content = {
+          items: items.map((item) => ({
+            infohash: item.hash,
+            title: item.title,
+          })),
+        };
+
+        const now = Math.floor(Date.now() / 1000);
+        const event = {
+          id: "0".repeat(64),
+          pubkey: localNostrSk || "0".repeat(64),
+          created_at: now,
+          kind: NOSTR_PRESETS_KIND,
+          tags: [
+            ["d", NOSTR_WHDA_D],
+            ["t", "cinema"],
+            ["t", "herzog"],
+            ["client", "cinema-poc0.2"],
+          ],
+          content: JSON.stringify(content),
+          sig: "0".repeat(64),
+        };
+
+        return event;
+      }
+
+      function refreshNostrEventFrame(event) {
+        if (!nostrEventFrameEl) return;
+        if (!event) {
+          nostrEventFrameEl.textContent =
+            "// No WHDA items available to build EVENT frame.";
+          return;
+        }
+        try {
+          const frame = ["EVENT", event];
+          nostrEventFrameEl.textContent = JSON.stringify(frame, null, 2);
+        } catch (e) {
+          nostrEventFrameEl.textContent = "// Failed to render EVENT frame.";
+        }
+      }
+
+      function syncWhdaToRelay() {
+        const event = buildWhdaEvent();
+        refreshNostrEventFrame(event);
+        if (!event) {
+          setNostrStatus("Nostr presets: no WHDA items to sync");
+          return;
+        }
+
+        if (!NOSTR_RELAY || typeof WebSocket === "undefined") {
+          setNostrStatus("Nostr presets: relay disabled (cannot sync)");
+          return;
+        }
+
+        let ws;
+        try {
+          ws = new WebSocket(NOSTR_RELAY);
+        } catch (e) {
+          setNostrStatus("Nostr presets: error opening WebSocket for sync");
+          return;
+        }
+
+        setNostrStatus("Nostr presets: syncing WHDA to relay (unsigned POC)");
+
+        ws.onopen = () => {
+          try {
+            const frame = ["EVENT", event];
+            ws.send(JSON.stringify(frame));
+            setNostrStatus("Nostr presets: WHDA EVENT sent (relay may reject)");
+          } catch (e) {
+            setNostrStatus("Nostr presets: error sending WHDA EVENT");
+          } finally {
+            try {
+              ws.close();
+            } catch (e) {
+              // ignore
+            }
+          }
+        };
+
+        ws.onerror = () => {
+          setNostrStatus("Nostr presets: error during WHDA sync");
+          try {
+            ws.close();
+          } catch (e) {
+            // ignore
+          }
+        };
       }
 
       function loadFilmFromHash(infohash, title, movieId) {
@@ -1436,6 +1569,12 @@
       if (nostrWhdaApplyButton) {
         nostrWhdaApplyButton.addEventListener("click", () => {
           applyWhdaDraftLocally();
+        });
+      }
+
+      if (nostrWhdaSyncButton) {
+        nostrWhdaSyncButton.addEventListener("click", () => {
+          syncWhdaToRelay();
         });
       }
     }
