--- a/index.html
+++ b/index.html
@@ -608,6 +608,9 @@
     const NOSTR_PRESETS_KIND = 30317;
     const NOSTR_PRESETS_D = "herzog-docs-presets";
     const NOSTR_WHDA_D = "WHDA";
+    const MAGNET_TRACKERS =
+      "&tr=wss%3A%2F%2Ftracker.openwebtorrent.com" +
+      "&tr=wss%3A%2F%2Ftracker.webtorrent.dev";
     const EXAMPLE_WHDA_ITEMS = [
       {
         hash: "c9c47e7b12586a59d83e3e519570835625d44b3e",
@@ -638,8 +641,6 @@
         title: "The Wild Blue Yonder (2005)",
       },
     ];
-    const MAGNET_TRACKERS =
-      "&tr=wss%3A%2F%2Ftracker.0x6d.net";
     const COLLECTION_MAGNET =
       "magnet:?xt=urn:btih:" +
       COLLECTION_INFOHASH +
