--- a/index.html
+++ b/index.html
@@ -530,8 +530,8 @@
         </div>
         <div class="status-caption-right" id="status-extra">Hash-only mock data</div>
       </div>
-      <div class="infohash">
-        Infohash: c9c47e7b12586a59d83e3e519570835625d44b3e
+      <div class="infohash" id="active-infohash">
+        Infohash: —
       </div>
       <div class="client-row" style="margin-top: 10px;">
         <div class="client-label">Client controls</div>
@@ -850,6 +850,15 @@
         if (!metadataLogEl) return;
         const value = (metadataLogEl.textContent || "").trim();
         metadataLogEl.textContent = value ? value + " · " + line : line;
+      }
+
+      function setActiveInfohash(hash) {
+        const el = document.getElementById("active-infohash");
+        if (!el) return;
+        const value = (hash || "").trim();
+        el.textContent = value
+          ? "Infohash: " + value
+          : "Infohash: —";
       }
 
       function ensureLocalNostrKey() {
@@ -1248,6 +1257,7 @@
         }
 
         const label = title || cleanHash;
+        setActiveInfohash(cleanHash);
         updateStatusLoading({ title: label, id: cleanHash });
         overlayBadge.textContent = "Connecting to swarm…";
 
