--- a/index.html
+++ b/index.html
@@ -1786,7 +1786,7 @@
             nostrWhdaEl.textContent = "// Failed to generate example WHDA";
             return;
           }
-          applyWhdaDraftLocally();
+          setScanStatus("Metadata scan: example WHDA draft generated (apply to use)");
         });
       }
     }
