--- a/index.html
+++ b/index.html
@@ -645,6 +645,10 @@
         hash: "DA288753694BE9483F2B24E8D99DA6C77FCBC9A9",
         title: "The Wild Blue Yonder (2005)",
       },
+      {
+        hash: "460b0b5d942af2de6e3d69333c782f391fcc1ee0",
+        title: "Charge – Blender Open Movie",
+      },
     ];
     const COLLECTION_MAGNET =
       "magnet:?xt=urn:btih:" +
